# pedant

./: .gitignore  COPYING  Gemfile  Makefile  Makefile.am  Makefile.in  README.md  Rakefile  aclocal.m4  config.status  configure  configure.ac  pedant.gemspec  zzz
.github/: CODEOWNERS
autom4te.cache/: output.0  requests  traces.0  traces.1
checks/: boot.lua
doc/: CHANGELOG  COPYING  HACKING  INSTALL
engine/: Makefile  parser.y  pedant.c  token.c  token.h  token_types.c  token_types.h  tokenizer.h  tokenizer.l
engine/parser/: grammar.y  token.c  token.h  tokens.l
engine/tokenizer/: token.h  token_types.h  tokenizer.h
engine/tree/: tests.c  tree.c  tree.h
lib/: pedant.rb
lib/lua-5.2.2/: lua  luac
lib/pedant/: all.rb  check.rb  cli.rb  command.rb  knowledge_base.rb  nasl.rb  parser.rb  test.rb  version.rb
lib/pedant/checks/: arity_of_builtins.rb  conditional_contains_assignment.rb  conditional_or_loop_is_empty.rb  confusing_variable_names.rb  contains_display.rb  contains_ip_address_literals.rb  contains_no_carriage_returns.rb  contains_no_duplicate_words.rb  contains_no_line_feeds.rb  contains_no_tabs.rb  contains_registration_section.rb  contains_unreachable_code.rb  ends_with_newline.rb  equality_with_regex.rb  files_parse_without_error.rb  files_parse_without_errors.rb  flipped_operands_on_match_or_substring.rb  get_byte_used.rb  local_variable_unused.rb  nonsense_comparison.rb  parse_test_code.rb  plugin_type_not_specified.rb  scratchpad_queries_use_concatenation.rb  script_id.rb  (+9 more)
src/: cfg.c  cfg.h  cli.c  cli.h  db.c  db.h  log.c  log.h  pedant.c
test/: assignment.rb  blank.rb  block.rb  constant.rb  empty.rb  expressions.rb  function.rb  if.rb  include.rb  incr_decr.rb  ip.rb  return.rb  string.rb  test_helper.rb  whitespace.rb
(+30 files in other folders)
